iniciando con el ejercicio Lyft

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
 <!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/main.css">
+	<title>A ride whenever you nedd one - Lyft</title>
+</head>
+<body>
+<header>
+
+	<!--div><img src="assets/images/hero.gif" alt=""></div-->
+	<div class="logotipo">
+	<img src="assets/images/logo-white.png" alt="">
+    </div>
+
+ <nav>
+ <ul>
+   <li><a href="#">Drive</a></li>
+    <li><a href="#">Explore</a></li>
+    <li><a href="#">Help</li></a>
+    <li><a href="#">Log in</a></li>
+  </ul>	
+ </nav>    
+ 
+ 	
+</header>
+	
+</body>
+</html>
